# PlottingTools

./: .gitignore  AGENTS.md  README.md  pyproject.toml
src/plotting_tools/: __init__.py  _label_layout.py  config.py  event_models.py  event_plotter.py  formatters.py  graph_builder.py  models.py  plot_util.py
tests/: conftest.py  test_event_plotter.py  test_imports.py  test_plot_util.py
